--- a/redis/缓存穿透|缓存击穿|缓存雪崩.md
+++ b/redis/缓存穿透|缓存击穿|缓存雪崩.md
@@ -1,6 +1,6 @@
 ### 缓存穿透
 
-#### 什么事缓存穿透
+#### 什么是缓存穿透
 
 > 我们使用Redis大部分情况都是通过Key查询对应的值，假如发送的请求传进来的key是不存在Redis中的，那么就查不到缓存，查不到缓存就会去数据库查询。假如有大量这样的请求，这些请求像“穿透”了缓存一样直接打在数据库上，这种现象就叫做缓存穿透。
 
@@ -31,7 +31,7 @@
 1. 上面说过了，如果业务允许的话，对于热点的key可以设置永不过期的key。
 
 2. 使用互斥锁。如果缓存失效的情况，只有拿到锁才可以查询数据库，降低了在同一时刻打在数据库上的请求，防止数据库打死。当然这样会导致系统的性能变差。
-
+w
 
 
 ### 缓存雪崩
